Closed Bug 321379 Opened 19 years ago Closed 19 years ago

Crash using a closed stream [@ nsConverterOutputStream::Close][@ nsConverterOutputStream::Write]

Categories

(Core :: Internationalization, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8.1

People

(Reporter: timeless, Assigned: Biesinger)

Details

(Keywords: crash, fixed1.8.0.7, fixed1.8.1)

Crash Data

Attachments

(2 files, 1 obsolete file)

I wasn't trying to crash it, but, it did when i forgot i had closed the stream.
Attached patch patch (obsolete) — Splinter Review
Attachment #206735 - Flags: superreview?(darin)
Attachment #206735 - Flags: review?(darin)
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.9alpha
Attached patch patch v2 Splinter Review
Attachment #206735 - Attachment is obsolete: true
Attachment #206738 - Flags: superreview?(darin)
Attachment #206738 - Flags: review?(darin)
Attachment #206735 - Flags: superreview?(darin)
Attachment #206735 - Flags: review?(darin)
(patch v2 also fixes write/writeString)
Attachment #206738 - Flags: review?(darin)
Attachment #206738 - Flags: review+
Attachment #206738 - Flags: approval1.8.1?
Attachment #206738 - Flags: superreview?(darin) → superreview+
fixed on trunk:
Checking in intl/uconv/src/nsConverterOutputStream.cpp;
/cvsroot/mozilla/intl/uconv/src/nsConverterOutputStream.cpp,v  <--  nsConverterOutputStream.cpp
new revision: 1.2; previous revision: 1.1
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attachment #206738 - Flags: approval1.8.1? → branch-1.8.1?(darin)
Attachment #206738 - Flags: branch-1.8.1?(darin) → branch-1.8.1+
fixed on MOZILLA_1_8_BRANCH
Checking in intl/uconv/src/nsConverterOutputStream.cpp;
/cvsroot/mozilla/intl/uconv/src/nsConverterOutputStream.cpp,v  <--  nsConverterOutputStream.cpp
new revision: 1.1.4.1; previous revision: 1.1
done
Keywords: fixed1.8.1
Target Milestone: mozilla1.9alpha → mozilla1.8.1
Comment on attachment 206738 [details] [diff] [review]
patch v2 

Incident ID: 19887900
Attachment #206738 - Flags: approval1.8.0.6?
Comment on attachment 206738 [details] [diff] [review]
patch v2 

approved for 1.8.0 branch, a=dveditz for drivers
Attachment #206738 - Flags: approval1.8.0.7? → approval1.8.0.7+
checked in on MOZILLA_1_8_0_BRANCH:

Checking in intl/uconv/src/nsConverterOutputStream.cpp;
/cvsroot/mozilla/intl/uconv/src/nsConverterOutputStream.cpp,v  <--  nsConverterOutputStream.cpp
new revision: 1.1.12.1; previous revision: 1.1
done
Keywords: fixed1.8.0.7
Can I get a testcase for this bug?
Whiteboard: [needs testcase]
Attached patch unit testSplinter Review
sure, here it is. patch for applying in intl/uconv. Adds a make check target. (this bug can't be directly triggered by users, only by extensions)
Attachment #236494 - Flags: review?(smontagu)
Attachment #236494 - Flags: review?(smontagu) → review+
unit test checked in on trunk:
Checking in tests/Makefile.in;
/cvsroot/mozilla/intl/uconv/tests/Makefile.in,v  <--  Makefile.in
new revision: 1.24; previous revision: 1.23
done
RCS file: /cvsroot/mozilla/intl/uconv/tests/unit/test_bug321379.js,v
done
Checking in tests/unit/test_bug321379.js;
/cvsroot/mozilla/intl/uconv/tests/unit/test_bug321379.js,v  <--  test_bug321379.js
initial revision: 1.1
done
Whiteboard: [needs testcase]
Crash Signature: [@ nsConverterOutputStream::Close] [@ nsConverterOutputStream::Write]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: