bug 321379 correctly throw an error when trying to write to or close a closed converter stream r=timeless sr=darin